<resources>
    <string name="app_name">Weeber</string>
    <string name="worker_name">Gigid He</string>
    <string name="gender">Male</string>
    <string name="price">$800</string>
    <string name="review">0/100</string>
    <string name="distance">14.7 km</string>
    <string name="contacta">Contacta</string>
    <string name="correo">gigid_he@gmail.com</string>
    <string name="telefono">1234567890 </string>
    <string name="textobtn">Enviar Mensaje</string>
    <string name="LoginCorreo">Correo</string>
    <string name="LoginPassword">Contraseña</string>
    <string name="LoginBtn">Iniciar Sesión</string>
    <string name="RegisterBtn">Registrar Cuenta</string>
    <string name="AcercaDe">Acerca de nosotros</string>
    <string name="Correo">Correo</string>
    <string name="Home">Home</string>
    <string name="currencySym">$</string>
</resources>