<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="287dp"
        android:layout_height="246dp"
        android:layout_marginTop="48dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/weeber_icono_new_blanco" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="287dp"
        android:layout_height="329dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/fondo_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.194">

        <TextView
            android:id="@+id/LoginCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:text="@string/LoginCorreo"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/LoginEmail"
            android:layout_width="249dp"
            android:layout_height="60dp"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:hint="@string/LoginCorreo"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginCorreo" />

        <TextView
            android:id="@+id/LoginContra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:text="@string/LoginPassword"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginEmail" />

        <EditText
            android:id="@+id/LoginPassword"
            android:layout_width="249dp"
            android:layout_height="60dp"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:hint="@string/LoginPassword"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginContra" />

        <Button
            android:id="@+id/LogIn"
            android:layout_width="122dp"
            android:layout_height="59dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/pink"
            android:text="@string/LoginBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginPassword"
            app:layout_constraintVertical_bias="0.666" />

        <Button
            android:id="@+id/SignIn"
            android:layout_width="122dp"
            android:layout_height="59dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/pink"
            android:text="@string/RegisterBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginPassword"
            app:layout_constraintVertical_bias="0.666" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>